tests/specs/ecosystem/qnighy/metaflow/0_1_0.test
qnighy/metaflow/0.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2637 [ERROR]: Variance annotations are only supported in type aliases for object, function, constructor, and mapped types.
export type ErrorUnionPredicate<out E> = ErrorPredicate<E>[];
                                ~~~~~
    at file://<tmpdir>/exception.ts:158:33

error: Type checking failed.

